Crawl animation polished

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -4,4 +4,20 @@ body {
   background-size: 100% 100%;
   width: auto;
   background-repeat: no-repeat;
+  color:yellow;
+  width:100%;
+  overflow: hidden;
+}
+
+header {
+  color:slategrey;
+  font-size: 60px;
+}
+
+.deathStar {
+  height: 80px;
+}
+
+h3 {
+  margin-top: 25px;
 }
