--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import './normalize.css';
 @import './OpeningTitle/OpeningTitle.scss';
 @import './App/App.scss';
+@import './MainContainer/MainContainer.scss';
 @import url('https://fonts.googleapis.com/css?family=Poller+One');
 
 
