--- a/src/OpeningTitle/OpeningTitle.scss
+++ b/src/OpeningTitle/OpeningTitle.scss
@@ -1,8 +1,7 @@
 .fade {
     position: relative;
     width: 100%;
-    min-height: 60vh;
-    top: -25px;
+    // top: -25px;
     z-index: 1;
   }
 
