--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -6,9 +6,6 @@
     max-width: 300px;
     border: 2px solid slategrey;
     margin: 10px;
-    color:slategrey
-}
-
-.card-info {
-
+    color:slategrey;
+    font-size: 20px;
 }
