--- a/src/MainContainer/MainContainer.scss
+++ b/src/MainContainer/MainContainer.scss
@@ -3,10 +3,11 @@ button {
     position: relative;
     background-color: Transparent;
     border: none;
+    margin: 20px;
+    font-size: 40px;
 }
 
 main {
     display: flex;
     justify-content: space-around;
-
 }
