--- a/src/OpeningTitle/OpeningTitle.scss
+++ b/src/OpeningTitle/OpeningTitle.scss
@@ -1,7 +1,7 @@
 .fade {
     position: relative;
     width: 100%;
-    // top: -25px;
+    top: -25px;
     z-index: 1;
   }
 
@@ -48,6 +48,11 @@
 
   .skip-btn {
       z-index: 4;
+      margin-top: 30px;
+  }
+
+  aside {
+      display: inline;
   }
 
 @keyframes crawl {
